--- a/Assigment 3.Rmd
+++ b/Assigment 3.Rmd
@@ -28,14 +28,13 @@ colnames(diabetes_data) <- c("number_of_times_pregnant",
                              "diabetes")
 library(ggplot2)
 ```
-### 3.1 Make a scatterplot showing a Plasma glucose concentration on Age where observations are colored by Diabetes levels.
+### Ex.3.1  
+#### Make a scatter plot showing a Plasma glucose concentration on Age where observations are colored by Diabetes levels.
+  
 
-First, create "diabetes_data_1" so the original data wont be affect
-
-Second, use "as.factor" so 1 = has diabetes 0= no diabetes
-```{r}
-diabetes_data_1 <- diabetes_data
-diabetes_data_1$diabetes <- as.factor(ifelse(diabetes_data_1$diabetes == 1, "Yes", "No"))
+```{r,echo=FALSE}
+diabetes_data_1 <- diabetes_data #create "diabetes_data_1" so the original data wont be affect  
+diabetes_data_1$diabetes <- as.factor(ifelse(diabetes_data_1$diabetes == 1, "Yes", "No")) # use "as.factor" so 1 means has diabetes, 0 means no diabetes  
 
 plot_assigment3_q1 <- ggplot(diabetes_data_1, aes(x=age, y=plasma_glucose_concentration,color=diabetes)) +
     geom_point() + 
@@ -43,14 +42,16 @@ plot_assigment3_q1 <- ggplot(diabetes_data_1, aes(x=age, y=plasma_glucose_concen
     labs(title="Assigment 3 Question 1, the original data",colour = "Diabetes")
 plot_assigment3_q1
 ```
+  
+#### Q. Do you think that Diabetes is easy to classify by a standard logistic regression model that uses these two variables as features?
+  
+In my opinion, it is not easy to classify Diabetes using standard logistic regression model (using age and Plasma glucose concentration as model features). As we can observed on the plot, although the one who "does not" have Diabetes are more concentrate on the bottom left side of the graph, it is still not easy to classify if the age gets older.
 
-In my opinion, it is easy to classify Diabetes using standard logistic regression model which age and Plasma glucose concentration are 
-the model features. As we can see on the plot, the one who "does not" have Diabetes is more concentrate on the bottom left side of the graph.
 
+### Ex.3.2 
+#### Train a logistic regression model with $y$ =Diabetes as target, $x_1$ =Plasma glucoseconcentration and $x_2$ =Age as features. Make a prediction for all observations by using r = 0.5  
 
-### 3.2 Train a logistic regression model with y =Diabetes as target, x_1 =Plasma glucoseconcentration and x_2 =Age as fetures. Make a prediction for all observations by using r = 0.5
-
-First, using "glm" function with family = binomial to train the logistic regression model
+##### 1. Use "glm" function with family = binomial to train the logistic regression model
 
 ```{r}
 model_1 <- glm( diabetes ~plasma_glucose_concentration + age , data = diabetes_data_1, family = binomial)
@@ -58,39 +59,53 @@ summary(model_1)$coef
 
 ```
 
+#### Q. Report the probabilistic equation of the estimated model
+ 
 According to the coefficient, the probabilistic equation is
-  $$p = \frac{e^{-5.89785793 +  0.03558250plasma_glucose_concentration +0.02450157age)}}{1 + e^{-5.89785793 +0.03558250*plasma_glucose_concentration +0.02450157*age}}$$
+  $$p = \frac{e^{-5.89785793 +  0.03558250plasmaglucoseconcentration +0.02450157age)}}{1 + e^{-5.89785793 +0.03558250*plasmaglucoseconcentration +0.02450157*age}}$$  
 
-Second, Compute training misclassification error
-```{r}
+##### 2. Compute training misclassification error
+```{r,echo=FALSE}
 diabetes_data_1$probabilities <- predict(model_1,diabetes_data_1, type = "response")#The type="response" option tells R to output probabilities of the form P(Y = 1|X), as opposed to other information such as the logit.
 diabetes_data_1$predicted_classes_0.5 <- as.factor(ifelse(diabetes_data_1$probabilities > 0.5, "Yes", "No"))
 missclass=function(X,X1){
   n=length(X)
   return(1-sum(diag(table(X,X1)))/n)
 }
-misscalssification_ex2 <- missclass(diabetes_data_1$diabetes,diabetes_data_1$predicted_classes_0.5)
-misscalssification_ex2
+missmissclassification_ex2 <- missclass(diabetes_data_1$diabetes,diabetes_data_1$predicted_classes_0.5)
 ```
-The misscalssification error is 0.2659713
 
-Third, plot the scatter plot showing the predicted values of Diabetes
 ```{r}
+missmissclassification_ex2
+```
+
+
+ 
+The missmissclassification error is 0.2659713
+
+
+##### 3. Plot the scatter plot showing the predicted values of Diabetes
+```{r,echo=FALSE}
 plot_assigment3_q2<- ggplot(diabetes_data_1) +
   geom_point(aes(x=age, y=plasma_glucose_concentration,color=predicted_classes_0.5)) +
   scale_color_manual(values=c("#000000", "#ff0000"))+ 
   labs(title="Assigment 3 Question 2, r=0.5",colour = "Diabetes")
 plot_assigment3_q2
 ```
-In my opinion, the quality of the classification is mediocre, although the overall missclafication rate (26.59713%) is not high, the prediction of older people is not ideal.
+  
+#### Q. Comment on the quality of the classification by using these results
 
-### 3.3  a) report the equation of the decision boundary between the two classes of step 2 (b)add a curve showing this boundary to the scatter plot
+In my opinion, the quality of the classification is mediocre. Although the overall missclafication rate (26.59713%) is not high, the prediction of older people is not ideal.
 
-(a)
+### EX.3.3  
+
+#### (a) Report the equation of the decision boundary between the two classes of step 2  
+
 The decision boundary equation of step 2 is 
- $$plasma glucose concentration = \frac{5.897858}{0.0355825} +\frac{-0.02450157}{0.0355825}age= 165.7516 - 0.6885848age$$
- (b)
-```{r}
+ $$plasma\ glucose\ concentration = \frac{5.897858}{0.0355825} +\frac{-0.02450157}{0.0355825}age= 165.7516 - 0.6885848age$$  
+
+#### (b) Add a curve showing this boundary to the scatter plot
+```{r,echo=FALSE}
 inverse_logit <- function(threshold){ #To correct the intercept on the plot if the threshold is not 0.5
   return(-log((1-threshold)/threshold))
   
@@ -117,10 +132,13 @@ plot_assigment3_q3 <- ggplot(diabetes_data_1) +
 plot_assigment3_q3
 ```
 
-As the graph shown, The decision boundary catch the data distribution very well in this case.
+#### Q. Comment whether the decision boundary seems to catch the data distribution well.  
 
-### 3.3  Make same kind of plots as in step 2 but use thresholds r = 0.2 and r = 0.8
-```{r}
+As the graph shown, the decision boundary seperate the prdiction of Diabetes very well in this case.
+
+### EX.3.4  
+#### Make same kind of plots as in step 2 but use thresholds r = 0.2 and r = 0.8  
+```{r,echo=FALSE}
 #===== r=0.2 =====
   diabetes_data_1$predicted_classes_0.2 <- as.factor(ifelse(diabetes_data_1$probabilities > 0.2, "Yes", "No"))
  
@@ -134,7 +152,7 @@ plot_assigment3_q4_r0.2<- ggplot(diabetes_data_1) +
 plot_assigment3_q4_r0.2
 ```
 
-```{r}
+```{r,echo=FALSE}
   #===== r=0.8 =====
   diabetes_data_1$predicted_classes_0.8 <- as.factor(ifelse(diabetes_data_1$probabilities > 0.8, "Yes", "No"))
   
@@ -148,13 +166,16 @@ plot_assigment3_q4_r0.8
  
 ```
 
-When r (threshold) value change to 0.8 the prediction of having diabetes will move toward to the top right side, which leaves less people being predict to have Diabetes. For r = 0.2 the oppsite happen. In both cases will result with higher missclasification which means the prediction becamen more inaccurate.
+#### Q.  comment on what happens with the prediction when r value changes
+
+When r = 0.8, the decision boundary of having diabetes will move toward to the top, which leaves less people being predict to have Diabetes. For r = 0.2 the opposite happen the decision boundary of having diabetes will move toward to the bottom, , which predict less people having Diabetes.  
+Both cases will result with higher missclasification errors, which means the prediction became less accurate.
 
 
-
-### 3.5 Perform a basis function expansion trick by computing new features
-```{r}
-  diabetes_data_ex5<- diabetes_data
+### EX.3.5 
+#### Perform a basis function expansion trick by computing new features  
+```{r,echo=FALSE}
+ diabetes_data_ex5<- diabetes_data
  diabetes_data_ex5$z1 <- (diabetes_data_ex5$plasma_glucose_concentration)^4
  diabetes_data_ex5$z2 <- (diabetes_data_ex5$plasma_glucose_concentration)^3 * diabetes_data_ex5$age
  diabetes_data_ex5$z3 <- (diabetes_data_ex5$plasma_glucose_concentration)^2 * (diabetes_data_ex5$age)^2
@@ -168,14 +189,67 @@ When r (threshold) value change to 0.8 the prediction of having diabetes will mo
  plot_assigment3_q5 <- ggplot(diabetes_data_ex5,aes(x=age, y=plasma_glucose_concentration)) +
    geom_point(aes(x=age, y=plasma_glucose_concentration,color=predicted_classes_0.5)) +
    scale_color_manual(values=c("#000000", "#ff0000"))+
-   labs(title="Assigment 5, r=0.5, r=0.8, with decision boundary",colour = "Diabetes")
+   labs(title="Assigment 5, r=0.5",colour = "Diabetes")
 
  plot_assigment3_q5
  
-misscalssification_ex5 <- missclass(diabetes_data_ex5$diabetes,diabetes_data_ex5$predicted_classes_0.5)
-misscalssification_ex5
+missmissclassification_ex5 <- missclass(diabetes_data_ex5$diabetes,diabetes_data_ex5$predicted_classes_0.5)
+cat("The missclassification is",missmissclassification_ex5)
 
 ```
 
-According to the missclasification error(0.2464146), this model is by far the best quality one compares to other model in this assignment.  The basis expansion trick change the decision boundary to a "U" shape and it is closer to the original data, unfortunately, due to higher dimension of the feature, the decision is hard to plot on a 2-D graph but we can still observe with the difference of color. 
+#### Q. What can you say about the quality of this model compared to the previous logistic regression model? How have the basis expansion trick affected the shape of the decision boundary and the prediction accuracy?
+
+According to the missclasification error(0.2464146), this model is by far the best quality one compares to other model in this assignment.  The basis expansion trick change the decision boundary to a "U" shape and the prediction is closer to the original data. However, due to higher dimension of the features, the decision boundary is hard to visualize on a 2-D graph, but we can still observe by looking at the color difference.   
 To sum up, using the basis expansion improves the prediction accuracy.
+
+\nextpage
+
+### Appendix
+```{r,eval=FALSE,echo=TRUE}
+#=====Set Up=====
+  diabetes_data <- read.csv("D:/下載/pima-indians-diabetes.csv")
+  colnames(diabetes_data) <- c("number_of_times_pregnant",
+                               "plasma_glucose_concentration", 
+                               "blood_pressure",
+                               "triceps_skinfold_thickness",
+                               "serum_insulin",
+                               "bmi",
+                               "diabetes_pedigree_function",
+                               "age",
+                               "diabetes")
+  library(ggplot2)
+
+#===== ÉX 3.1=====
+  diabetes_data_1 <- diabetes_data #create "diabetes_data_1" so the original data wont be affect  
+  diabetes_data_1$diabetes <- as.factor(ifelse(diabetes_data_1$diabetes == 1, "Yes", "No")) # use "as.factor" so 1 means has diabetes, 0 means no diabetes  
+
+  plot_assigment3_q1 <- ggplot(diabetes_data_1, aes(x=age, y=plasma_glucose_concentration,color=diabetes)) +
+      geom_point() + 
+      scale_color_manual(values=c("#000000", "#ff0000")) +
+      labs(title="Assigment 3 Question 1, the original data",colour = "Diabetes")
+  plot_assigment3_q1
+
+#===== ÉX 3.2=====
+  #=====1=====
+  model_1 <- glm( diabetes ~plasma_glucose_concentration + age , data = diabetes_data_1, family = binomial)
+  summary(model_1)$coef
+
+  diabetes_data_1$probabilities <- predict(model_1,diabetes_data_1, type = "response")#The type="response" option tells R to output probabilities of the form P(Y = 1|X), as opposed to other information such as the logit.
+  diabetes_data_1$predicted_classes_0.5 <- as.factor(ifelse(diabetes_data_1$probabilities > 0.5, "Yes", "No"))
+  
+  #=====2=====
+  missclass=function(X,X1){
+    n=length(X)
+    return(1-sum(diag(table(X,X1)))/n)
+  }
+  missmissclassification_ex2 <- missclass(diabetes_data_1$diabetes,diabetes_data_1$predicted_classes_0.5)
+  missmissclassification_ex2
+
+  #=====3=====
+  plot_assigment3_q2<- ggplot(diabetes_data_1) +
+  geom_point(aes(x=age, y=plasma_glucose_concentration,color=predicted_classes_0.5)) +
+  scale_color_manual(values=c("#000000", "#ff0000"))+ 
+  labs(title="Assigment 3 Question 2, r=0.5",colour = "Diabetes")
+  plot_assigment3_q2
+```
