--- a/Assigment 3.Rmd
+++ b/Assigment 3.Rmd
@@ -9,14 +9,14 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_chunk$set(tidy.opts = list(width.cutoff = 55), tidy = TRUE)
+knitr::opts_chunk$set(tidy.opts = list(width.cutoff = 55), tidy = TRUE) #require package"formatR"
 ```
 
 \newpage
 # Assignment 3
 First, the data from the Excel file *pima-indians-diabetes* will be imported and the column names are changed
 ```{r, include=FALSE}
-diabetes_data <- read.csv("D:/pima-indians-diabetes.csv")
+diabetes_data <- read.csv("D:/pima-indians-diabetes.csv", header = FALSE)
 colnames(diabetes_data) <- c("number_of_times_pregnant",
                              "plasma_glucose_concentration", 
                              "blood_pressure",
@@ -28,7 +28,7 @@ colnames(diabetes_data) <- c("number_of_times_pregnant",
                              "diabetes")
 library(ggplot2)
 ```
-### Ex.3.1  
+### Ex.3.1
 #### Make a scatter plot showing a Plasma glucose concentration on Age where observations are colored by Diabetes levels.
   
   
@@ -42,17 +42,19 @@ plot_assigment3_q1 <- ggplot(diabetes_data_1, aes(x=age, y=plasma_glucose_concen
 plot_assigment3_q1
 ```
   
-#### Q. Do you think that Diabetes is easy to classify by a standard logistic regression model that uses these two variables as features?
-  
+#### Q. Do you think that Diabetes is easy to classify by a standard logistic regression model that uses these two variables as features?  
+
+#### A.
 In my opinion, it is not easy to classify Diabetes using standard logistic regression model (using age and Plasma glucose concentration as model features). As we can observed on the plot, although the one who "does not" have Diabetes are more concentrate on the bottom left side of the graph, it is still not easy to classify if the age gets older.
 
 \newpage
 ### Ex.3.2 
 #### Train a logistic regression model with $y$ =Diabetes as target, $x_1$ =Plasma glucoseconcentration and $x_2$ =Age as features. Make a prediction for all observations by using r = 0.5  
 
-##### 1. Use "glm" function with family = binomial to train the logistic regression model
 
+  
 ```{r}
+# Use "glm" function with family = binomial to train the logistic regression model
 model_1 <- glm( diabetes ~plasma_glucose_concentration + age , data = diabetes_data_1, family = binomial)
 summary(model_1)$coef
 ```
@@ -60,9 +62,11 @@ summary(model_1)$coef
 #### Q. Report the probabilistic equation of the estimated model
  
 According to the coefficient, the probabilistic equation is
-  $$p = \frac{e^{-5.89785793 +  0.03558250plasmaglucoseconcentration +0.02450157age)}}{1 + e^{-5.89785793 +0.03558250*plasmaglucoseconcentration +0.02450157*age}}$$  
+  $$p = \frac{1}{1 + e^{5.9124  + 0.0356*plasma\ glucose\ concentration +0.0247age}}$$  
+  
+### 2. Compute training misclassification error  
 
-##### 2. Compute training misclassification error
+
 ```{r,echo=FALSE}
 diabetes_data_1$probabilities <- predict(model_1,diabetes_data_1, type = "response")#The type="response" option tells R to output probabilities of the form P(Y = 1|X), as opposed to other information such as the logit.
 diabetes_data_1$predicted_classes_0.5 <- as.factor(ifelse(diabetes_data_1$probabilities > 0.5, "Yes", "No"))
@@ -70,16 +74,16 @@ missclass=function(X,X1){
   n=length(X)
   return(1-sum(diag(table(X,X1)))/n)
 }
-missmissclassification_ex2 <- missclass(diabetes_data_1$diabetes,diabetes_data_1$predicted_classes_0.5)
+missclassification_ex2 <- missclass(diabetes_data_1$diabetes,diabetes_data_1$predicted_classes_0.5)
 ```
 
 ```{r}
-missmissclassification_ex2
+missclassification_ex2
 ```
 
 
  
-The missmissclassification error is 0.2659713
+The missclassification error is 0.2659713
 
 \newpage
 ##### 3. Plot the scatter plot showing the predicted values of Diabetes
@@ -93,15 +97,16 @@ plot_assigment3_q2
   
 #### Q. Comment on the quality of the classification by using these results
 
-In my opinion, the quality of the classification is mediocre. Although the overall missclafication rate (26.59713%) is not high, the prediction of older people is not ideal.
+#### A.
+In my opinion, the quality of the classification is mediocre. Although the overall missclafication rate (26.59713%) is not high, the prediction of older people is not ideal compare to the original data.
 
 \newpage
 ### EX.3.3  
 
-#### (a) Report the equation of the decision boundary between the two classes of step 2  
+### (a) Report the equation of the decision boundary between the two classes of step 2  
 
 The decision boundary equation of step 2 is 
- $$plasma\ glucose\ concentration = \frac{5.897858}{0.0355825} +\frac{-0.02450157}{0.0355825}age= 165.7516 - 0.6885848age$$  
+ $$plasma\ glucose\ concentration = \frac{5.912}{0.03565} +\frac{-0.0247}{0.0356}age= 165.8345 - 0.6938age$$  
 
 #### (b) Add a curve showing this boundary to the scatter plot
 ```{r,echo=FALSE,fig.align = 'center'}
@@ -131,7 +136,8 @@ plot_assigment3_q3
 
 #### Q. Comment whether the decision boundary seems to catch the data distribution well.  
 
-As the graph shown, the decision boundary seperate the prdiction of Diabetes very well in this case.
+#### A.
+As the graph shown, the decision boundary separate the prediction of Diabetes very well in this case. However, because the dot on this particular graph is the predicted data, not the original data. So we can not conclude if the decision boundary catch the original data well or not.
 
 \newpage
 ### EX.3.4  
@@ -166,6 +172,7 @@ plot_assigment3_q4_r0.8
 
 #### Q.  comment on what happens with the prediction when r value changes
 
+#### A.
 When r = 0.8, the decision boundary of having diabetes will move toward to the top, which leaves less people being predict to have Diabetes. For r = 0.2 the opposite happen the decision boundary of having diabetes will move toward to the bottom, , which predict less people having Diabetes.  
 Both cases will result with higher missclasification errors, which means the prediction became less accurate.
 
@@ -189,12 +196,13 @@ Both cases will result with higher missclasification errors, which means the pre
    labs(title="Assigment 5, r=0.5",colour = "Diabetes")
  plot_assigment3_q5
  
-missmissclassification_ex5 <- missclass(diabetes_data_ex5$diabetes,diabetes_data_ex5$predicted_classes_0.5)
-cat("The missclassification is",missmissclassification_ex5)
+missclassification_ex5 <- missclass(diabetes_data_ex5$diabetes,diabetes_data_ex5$predicted_classes_0.5)
+cat("The missclassification is",missclassification_ex5)
 ```
 
 #### Q. What can you say about the quality of this model compared to the previous logistic regression model? How have the basis expansion trick affected the shape of the decision boundary and the prediction accuracy?
 
+#### A.
 According to the missclasification error(0.2464146), this model is by far the best quality one compares to other model in this assignment.  The basis expansion trick change the decision boundary to a "U" shape and the prediction is closer to the original data. However, due to higher dimension of the features, the decision boundary is hard to visualize on a 2-D graph, but we can still observe by looking at the color difference.   
 To sum up, using the basis expansion improves the prediction accuracy.
 
@@ -202,9 +210,9 @@ To sum up, using the basis expansion improves the prediction accuracy.
 
 ### Appendix
 ```{r,eval=FALSE,echo=TRUE}
-#=====Assignment 3=====
+#=====Assignment 3=====   
 #=====Set Up=====
-  diabetes_data <- read.csv("D:/pima-indians-diabetes.csv")
+  diabetes_data <- read.csv("D:/pima-indians-diabetes.csv", header = FALSE)
   colnames(diabetes_data) <- c("number_of_times_pregnant",
                                "plasma_glucose_concentration", 
                                "blood_pressure",
@@ -241,8 +249,8 @@ To sum up, using the basis expansion improves the prediction accuracy.
     n=length(X)
     return(1-sum(diag(table(X,X1)))/n)
   }
-  missmissclassification_ex2 <- missclass(diabetes_data_1$diabetes,diabetes_data_1$predicted_classes_0.5)
-  missmissclassification_ex2
+  missclassification_ex2 <- missclass(diabetes_data_1$diabetes,diabetes_data_1$predicted_classes_0.5)
+  missclassification_ex2
   #=====3=====
   plot_assigment3_q2<- ggplot(diabetes_data_1) +
   geom_point(aes(x=age, y=plasma_glucose_concentration,color=predicted_classes_0.5))+
@@ -318,6 +326,6 @@ To sum up, using the basis expansion improves the prediction accuracy.
     labs(title="Assigment 5, r=0.5",colour = "Diabetes")
   plot_assigment3_q5
  
-  missmissclassification_ex5 <- missclass(diabetes_data_ex5$diabetes,diabetes_data_ex5$predicted_classes_0.5)
-  cat("The missclassification is",missmissclassification_ex5)
+  missclassification_ex5 <- missclass(diabetes_data_ex5$diabetes,diabetes_data_ex5$predicted_classes_0.5)
+  cat("The missclassification is",missclassification_ex5)
 ```
