--- a/Lab1.Rmd
+++ b/Lab1.Rmd
@@ -370,3 +370,116 @@ ggplot(dataset, aes(age, plasma_glucose, color = g_hat)) + geom_point()
 cm <- table(dataset$y, dataset$g_hat)
 1- (sum(diag(cm)) / nrow(dataset))
 ```
+
+
+## Appendix
+```{r}
+library(tidyverse)
+library(kknn)
+
+optdigits <- read.csv("./dataset/optdigits.csv", header = FALSE)
+
+optdigits <- optdigits %>% 
+  mutate(y = as.factor(V65)) %>% 
+  select(!V65)
+
+n <- nrow(optdigits)
+set.seed(12345)
+train_idx <- sample(seq_len(n), floor(n * 0.5))
+train_data <- optdigits[train_idx, ]
+
+remainder_idx <- setdiff(seq_len(n), train_idx)
+
+set.seed(12345)
+valid_idx <- sample(remainder_idx, floor(n * 0.25))
+valid_data <- optdigits[valid_idx, ]
+
+test_idx <- setdiff(remainder_idx, valid_idx)
+test_data <- optdigits[test_idx, ]
+
+# 2
+knn_model_train <- kknn(y~., train = train_data, test = train_data, k = 30, kernel = "rectangular")
+g_hat_train <-knn_model_train$fitted.values
+cm_train <- table(train_data$y, g_hat_train)
+knitr::kable(cm_train, caption = "Confusion matrix for 30-nn on train dataset")
+error_train <- 1 - (sum(diag(cm_train)) / length(g_hat_train))
+
+knn_model_test <- kknn(y~., train = train_data, test = test_data, k = 30, kernel = "rectangular")
+g_hat_test <- knn_model_test$fitted.values
+cm_test <- table(test_data$y, g_hat_test)
+knitr::kable(cm_test, caption = "Confusion matrix for 30-nn on test dataset")
+error_test <- 1 - (sum(diag(cm_test)) / length(g_hat_test))
+
+# 3
+
+prob_g8 <- predict(knn_model_train, type = "prob")
+prob_g8 <- prob_g8[, "8"]
+observations <- train_data %>%
+  mutate("prob" = prob_g8) %>%
+  filter(y == "8") %>%
+  arrange(prob) %>%
+  slice(
+    c(1:3, length(y) - 1 , length(y))
+  )
+
+for(i in 1:5){
+  fig_matrix <- matrix(as.numeric(observations[i, 1:64]), nrow = 8, byrow = T)
+  fig_title <- paste("Probability =", round(observations[i, "prob"]* 100, 4), "%")
+  heatmap(fig_matrix, Colv = NA, Rowv = NA, col = paste0("gray", 1:99), main = fig_title) 
+}
+
+
+# 4
+
+results <- map(1:30, ~{
+  model <- kknn(y~., train = train_data, test = train_data, k = .x, kernel = "rectangular")
+  train_sum <- sum(diag(table(train_data$y, model$fitted.values)))
+  model <- kknn(y~., train = train_data, test = valid_data, k = .x, kernel = "rectangular")
+  valid_sum <- sum(diag(table(valid_data$y, model$fitted.values)))
+  c(train_sum, valid_sum)
+})
+results <- as.data.frame(results)
+names(results) <- 1:30
+
+lengths <- c(nrow(train_data), nrow(valid_data))
+errors <- (lengths - results) /lengths * 100
+
+plot(t(errors)[, 1], type = "b", col = "blue",
+     ylim = c(0, 6),
+     xlab = "Vlaue of K",
+     ylab = "Misclassification Error")
+points(t(errors)[, 2], type = "b", col = "red")
+legend(0, 5.5, legend=c("train", "validation"),
+       col=c("blue", "red"), lty=1, cex=0.8)
+
+
+# 5
+cross_entropy <- function(y, prob){
+  one_hot <- model.matrix(~ 0 + y)
+  result <- sum(- one_hot * log(prob +  1e-15)) 
+  return(result / length(y))
+}
+
+results <- map(1:30, ~{
+  model <- kknn(y~., train = train_data, test = train_data, k = .x, kernel = "rectangular")
+  ce_train <- cross_entropy(train_data$y, model$prob)
+  model <- kknn(y~., train = train_data, test = valid_data, k = .x, kernel = "rectangular")
+  ce_valid <- cross_entropy(valid_data$y, model$prob)
+  c(ce_train, ce_valid)
+})
+results <- as.data.frame(results)
+names(results) <- 1:30
+
+best_k <- which.min(t(results)[, 2])
+ce_lowest <- t(results)[best_k, 2]
+
+plot(t(results)[, 1], type = "b", col = "blue",
+     ylim = c(0, 1),
+     xlab = "Vlaue of K",
+     ylab = "Misclassification Error")
+points(t(results)[, 2], type = "b", col = "red")
+abline(v = 6, h = ce_lowest, lty = 2)
+legend(25, 1, legend=c("train", "validation"),
+       col=c("blue", "red"), lty=1, cex=0.8)
+```
+
